--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Ignore everything
 *
 
-# Track only a specific folder (replace with your project path)
-!/Web Development/Travel Booking System-Sathi/
+# Allow tracking files in this folder
+!/
 
-# Optional: Allow Git to track .gitignore itself
-!.gitignore
+# Optional: Allow specific file types
+!*.html
+!*.css
+!*.js
+!/images/
